--- a/pom.xml
+++ b/pom.xml
@@ -44,10 +44,15 @@
 </dependency>
 <dependency>
     <groupId>io.jsonwebtoken</groupId>
-    <artifactId>jjwt-jackson</artifactId>
-    <version>0.11.2</version>
-    <scope>runtime</scope>
+    <artifactId>jjwt</artifactId>
+    <version>0.9.1</version>
 </dependency>
+<dependency>
+    <groupId>com.auth0</groupId>
+    <artifactId>java-jwt</artifactId>
+    <version>3.18.2</version>
+</dependency>
+
 
     </dependencies>
   <build>
@@ -62,6 +67,24 @@
       <target>8</target>
     </configuration>
   </plugin>
+   <plugin>
+      <groupId>org.apache.tomcat.maven</groupId>
+      <artifactId>tomcat7-maven-plugin</artifactId>
+      <version>2.2</version>
+    </plugin>
 </plugins>
   </build>
+
+   <distributionManagement>
+    <repository>
+      <id>myrepo</id>
+      <name>My Repository</name>
+      <url>http://myserver/repo</url>
+    </repository>
+    <snapshotRepository>
+      <id>mysnapshots</id>
+      <name>My Snapshot Repository</name>
+      <url>http://myserver/snapshot-repo</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
